--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,77 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  width: 55%;
+  margin: 50px auto;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.App h1{
+  text-align: center;
+}
+
+.form{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.form input[type="text"] {
+  padding: 10px;
+  width: 85%;
+  border: 1px solid #eee ;
+  border-radius: 6px ;
+}
+
+.form input[type="text"]:focus, .form button[type="submit"]:focus {
+  outline: none;
+}
+
+.form button[type="submit"] {
+  background-color: blue;
+  color: #fff;
+  border: none;
+  border-radius:6px ;
+  padding: 10px;
+  cursor: pointer;
+}
+.todo-listItems{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.todo-list{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.item-content{
+  width: 65%;
+}
+.todo-list button{
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  padding: 6px;
+}
+.todo-list button:focus{
+  outline: none;
+}
+.item-update{
+  background-color: goldenrod;
+}
+.item-delete{
+  background-color: red;
+  color: white;
 }
