--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: white;
+  background-color: #eee;
   width: 55%;
   margin: 50px auto;
   padding: 10px;
@@ -108,4 +108,23 @@
 .item-delete{
   background-color: red;
   color: white;
+}
+
+/* update form */
+.update-form{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.update-form-input{
+  width: 80%;
+  border-radius: 6px;
+  border: 1 px solid #eee;
+  padding: 8px;
+  outline: none;
+}
+.update-new-btn{
+  background-color:darkorchid ;
+  color: #fff;
+  cursor: pointer;
 }
